DREM-1765 レビュー指摘修正対応(activity.tvprogram)
Change-Id: Iafea314bf895c677edc213c3e7ed98aefbbcb6b0

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -200,17 +200,14 @@
         <activity
             android:name=".activity.tvprogram.MyChannelEditActivity"
             android:screenOrientation="portrait"
-            android:exported="false" />
+            android:exported="false"
+            android:hardwareAccelerated="false"/>
         <activity
             android:name=".activity.tvprogram.SelectChannelActivity"
             android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".activity.tvprogram.TvProgramListActivity"
-            android:screenOrientation="portrait"
-            android:exported="false" />
-        <activity
-            android:name=".activity.tvprogram.WeekTvProgramListActivity"
             android:screenOrientation="portrait"
             android:exported="false" />
         <!-- ======================================  TvProgram グループ End ====================================== -->
