DREM-1737 グローバルメニューから設定とお知らせを交互に行き来するとActivityStackがたまり続ける
Change-Id: I4aa6ce87a02cbf2e19f536d358c52aff1e290094

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -115,12 +115,14 @@
             android:name=".activity.setting.NewsActivity"
             android:screenOrientation="portrait"
             android:exported="false"
-            android:hardwareAccelerated="false"/>
+            android:hardwareAccelerated="false"
+            android:launchMode="singleTask"/>
         <activity
             android:name=".activity.setting.SettingActivity"
             android:screenOrientation="portrait"
             android:exported="false"
-	        android:hardwareAccelerated="false"/>
+	        android:hardwareAccelerated="false"
+            android:launchMode="singleTask"/>
         <activity
             android:name=".activity.setting.SettingImageQualityActivity"
             android:screenOrientation="portrait"
