https://agile.apccloud.jp/jira/browse/DREM-2063
[実装]([DREM-61]コンテンツ一覧の多階層化(ウィザード対応))実装(コンテンツの判定と表示)
API,Dataprovider,Activityの骨組み実装

Change-Id: I0a7dc6372ab432f9b0e1a86f1b9b89ef91fa8cdb

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -158,6 +158,11 @@
             android:screenOrientation="portrait"
             android:exported="false"
 	        android:hardwareAccelerated="false"/>
+
+        <activity
+            android:name=".activity.common.ChildContentListActivity"
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <!-- ======================================  Other グループ End ====================================== -->
 
 
