--- a/dTVTerminalApp/app/build.gradle
+++ b/dTVTerminalApp/app/build.gradle
@@ -301,6 +301,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    //Googleアナリティクス用ライブラリ
+    compile 'com.google.firebase:firebase-core:12.0.1'
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:26.1.0'
@@ -320,4 +322,6 @@ dependencies {
     //        compile(name: 'dixim-android-util2', ext: 'aar')
     //SSLチェックライブラリ
     compile files('libs/ocsplib2.0.jar')
+    //Googleアナリティクス用ライブラリ（こちらはdependenciesの最後に追加せよとの注意あり）
+    apply plugin: 'com.google.gms.google-services'
 }
