--- a/dTVTerminalApp/app/build.gradle
+++ b/dTVTerminalApp/app/build.gradle
@@ -302,7 +302,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //Googleアナリティクス用ライブラリ
-    compile 'com.google.firebase:firebase-core:12.0.1'
+    compile 'com.google.android.gms:play-services-analytics:10.0.1'
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:26.1.0'
