DREM-2093 番組表データ取得契機を起動時に変更
サービスの開始からデータ送信、送信後のdb保存まで実装

Change-Id: If6bd6edf6c2056f8c714c4ffcd07ca7233004897

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -246,11 +246,15 @@
                 <action android:name="com.nttdocomo.android.idmanager.action.DOCOMOID_REMOVED" />
                 <action android:name="com.nttdocomo.android.idmanager.action.DOCOMOID_INVALIDATE" />
                 <action android:name="com.nttdocomo.android.idmanager.action.DOCOMOID_LINKED_LINE" />
+                <action android:name="com.nttdocomo.android.idmanager.action.SEND_CHANNEL_LIST" />
+                <action android:name="com.nttdocomo.android.idmanager.action.SEND_SCHEDULE_LIST" />
             </intent-filter>
         </receiver>
 
         <service android:name=".service.download.DownloadService"
             android:exported="false" />
+        <service
+            android:name=".service.TvProgramIntentService"
+            android:exported="false"/>
     </application>
-
 </manifest>
