DREM-1637 WebURL適用およびローカルhtml差し替え
以下は今後提供される予定のため未済

・ペアリングヘルプ
　初回起動時のペアリング設定画面でペアリング可能なドコモテレビターミナルが見つからない場合に「ドコモテレビターミナルとペアリングするには」ボタンで表示されるペアリングヘルプ（ローカルhtmlファイルとスタイルシートファイル）
・ドコテレアプリのGoogle Play ストア‎URL
 　ドコテレアプリのアプリURLが未済のため、仮のURLを指定しています。

Change-Id: Ic88280edb8f95c6dddbfcdff84a970e3d7a03b4a

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -113,7 +113,7 @@
 
         <!-- ====================================== Other グループ Begin ====================================== -->
         <activity
-            android:name=".activity.setting.NewsActivity"
+            android:name=".activity.setting.NoticeActivity"
             android:screenOrientation="portrait"
             android:exported="false"
             android:hardwareAccelerated="false"
