「DREM-2556」　ローカルhtml(初回起動時のペアリングヘルプ、初回起動時の利用規約)の適用
Change-Id: Id3e8dfc1e0f986f51eb54f8d0c730565ca7cf733

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -101,6 +101,9 @@
             android:name=".activity.launch.TutorialActivity"
             android:screenOrientation="portrait"
             android:exported="false" />
+        <activity android:name=".activity.launch.LaunchTermsOfServiceActivity"
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <activity android:name=".activity.launch.PairingHelpActivity"
             android:screenOrientation="portrait"
             android:exported="false" />
