Final版リリースに合わせたバージョン値修正
Change-Id: I89d7ac38c8b6e8578f842f23c52cee46b41d7dff

--- a/dTVTerminalApp/app/build.gradle
+++ b/dTVTerminalApp/app/build.gradle
@@ -8,8 +8,8 @@ android {
     defaultConfig {
         applicationId "com.nttdocomo.android.tvterminalapp"
         minSdkVersion 19
-        targetSdkVersion 26
-        versionCode 8           //★バージョンコード. リリース毎に更新する事
+        targetSd1kVersion 26
+        versionCode 11           //★バージョンコード. リリース毎に更新する事
         versionName "01.00."    //★メジャーバージョン.マイナーバージョン. リリース毎に更新する事
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
