--- a/dTVTerminalApp/app/build.gradle
+++ b/dTVTerminalApp/app/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'com.android.application'
 android {
     //リリース作業時には★印の更新値を確認する事！
 
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.2"
     defaultConfig {
         applicationId "com.nttdocomo.android.tvterminalapp"
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 21           //★バージョンコード. リリース毎に更新する事
         versionName "01.10."    //★メジャーバージョン.マイナーバージョン. リリース毎に更新する事
 
@@ -315,11 +315,12 @@ dependencies {
     })
 
     //Googleアナリティクス用ライブラリ
+    //noinspection GradleDependency
     compile 'com.google.android.gms:play-services-analytics:10.0.1'
-    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:appcompat-v7:28.0.0-rc01'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:support-v4:26.1.0'
-    compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support:support-v4:28.0.0-rc01'
+    compile 'com.android.support:design:28.0.0-rc01'
     testCompile 'junit:junit:4.12'
 
     //DiXiM SecurePlayer SDK Debug Version
@@ -370,5 +371,5 @@ dependencies {
     _test__unsigned_offCompile(name: 'dixim-android-util2', ext: 'aar')
 
     //SSLチェックライブラリ
-    compile files('libs/ocsplib2.0.jar')
+    compile files('libs/ocsplib3.0.jar')
 }
