DREM-5010 <AOS> ペアリング導線の改善(既存画面変更)★
Change-Id: I745e1dad101f8e28a36df2d00e924c3dbcbefb31

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -114,6 +114,9 @@
             android:screenOrientation="portrait"
             android:theme="@style/STBTheme"
             android:exported="false" />
+        <activity android:name=".activity.launch.InitialSettingDoorActivity"
+            android:screenOrientation="portrait"
+            android:exported="false"/>
         <!-- ======================================  Launch グループ End ====================================== -->
 
 
