DREM-4144 コンテンツ詳細画面(ひかりTV-エピソードタブ)最新コードに適用
Change-Id: I4cad149d7a9917709526cbb449ded5407688f256

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -194,6 +194,11 @@
             android:configChanges="keyboardHidden|keyboard|orientation|screenSize"
             android:screenOrientation="portrait"
             android:exported="false" />
+        <activity
+            android:name=".activity.detail.EpisodeAllReadActivity"
+            android:configChanges="keyboardHidden|keyboard|orientation|screenSize"
+            android:screenOrientation="portrait"
+            android:exported="false" />
         <!-- ======================================  Player グループ End ====================================== -->
 
 
